--- a/css/style.css
+++ b/css/style.css
@@ -1,59 +1,52 @@
 @import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap');
 *{
-  font-family: 'Cutive Mono', monospace;
-}
-body{
   margin: 0;
   padding: 0;
+  font-family: 'Cutive Mono', monospace;
   box-sizing: border-box;
-  display: grid;
+  width: 100%;
+  height: 100%;
   place-items: center;
-  height: 90vh;
+}
+body{ 
+  display: grid; 
 }
 .main{
-  height: 95%;
-  width: 95%;
+  padding: 5%;
   background: rgba(0,0,0,0.2);
-  border-radius: 1vh;
-  display: grid;
-  place-items: center;
+  border-radius: 15vh;
+  display: grid; 
 }
-.main #box{
+input{
+  -webkit-appearance: none;
+  width: 85vh;
   height: 15vh;
-  width: 95%;
-  border: none;
-  background: rgba(0,0,0,0.1);
-  border-radius: 1vh;
+  border-radius: 15vh;
+}
+input::-webkit-slider-thumb{
+  -webkit-appearance: none;
+  background: rgba(127,127,127,0.7);
+  width: 15vh;
+  height: 15vh;
+  border-radius: 15vh;
+  cursor: pointer;
+}
+#c{
+  background: linear-gradient(to right, #f00, #f80, #880, #080,#088, #08f, #00f);
   font-size: 2.5vh;
   text-align: center;
 }
-input[type="range"]{
-  -webkit-appearance: none;
-  height: 15vh;
-  width: 95%;
-  border-radius: 25vh;
-  outline: none;
-}
-input[type="range"]::-webkit-slider-thumb{
-  -webkit-appearance: none;
-  background: rgba(127,127,127,0.7);
-  width: 5vh;
-  height: 5vh;
-  border-radius: 5vh;
-  cursor: pointer;
-}
-.main #red{
-  background: linear-gradient(90deg,#000,#f00);
+#r{
+  background: linear-gradient(90deg, #000, #f00);
 }
 
-.main #green{
-  background: linear-gradient(90deg,#000,#0f0);
+#g{
+  background: linear-gradient(90deg, #000, #0f0);
 }
   
-.main #blue{
-  background: linear-gradient(90deg,#000,#00f);
+#b{
+  background: linear-gradient(90deg, #000, #00f);
 }
-
-.main #alfa{
-  background: linear-gradient(90deg,rgba(0,0,0,0),rgba(255,255,255,1));
+#a{
+  background: linear-gradient(90deg, rgba(0, 0, 0, 0), rgba(255, 255, 255,1));
 }
