--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap');
 *{
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Cutive Mono', monospace;
-  box-sizing: border-box;
+  font-family: 'Cutive Mono', monospace; 
   width: 100%;
-  height: 100%;
+  height: 100vh;
   place-items: center;
 }
 body{ 
-  display: grid; 
+  display: grid;
+  height: 100vh;
+  width: 100%;
 }
 .main{
   padding: 5%;
   background: rgba(0,0,0,0.2);
-  border-radius: 15vh;
+  border-radius: 5vh;
   display: grid; 
 }
 input{
   -webkit-appearance: none;
-  width: 85vh;
+  width: 95%;
   height: 15vh;
   border-radius: 15vh;
 }
@@ -28,7 +30,7 @@ input::-webkit-slider-thumb{
   background: rgba(127,127,127,0.7);
   width: 15vh;
   height: 15vh;
-  border-radius: 15vh;
+  border-radius: 10vh;
   cursor: pointer;
 }
 #c{
