comment using shell script

--- a/css/style.css
+++ b/css/style.css
@@ -12,12 +12,12 @@ body{
   display: grid;
   height: 100vh;
   width: 100%;
+  padding: 1%;
 }
-.main{
-  padding: 5%;
-  background: rgba(0,0,0,0.2);
+div{
+  display: grid;
+  padding: 2.5%;
   border-radius: 5vh;
-  display: grid; 
 }
 input{
   -webkit-appearance: none;
