--- a/css/style.css
+++ b/css/style.css
@@ -13,39 +13,37 @@ body{
   height: 100vh;
   width: 100%;
   padding: 1%;
+  background: White;
 }
 div{
   display: grid;
-  padding: 2.5%;
-  border-radius: 5vh;
 }
 input{
   -webkit-appearance: none;
   width: 95%;
-  height: 15vh;
-  border-radius: 15vh;
+  height: 7.5vh;
+  border-radius: 5vh;
 }
 input::-webkit-slider-thumb{
   -webkit-appearance: none;
-  background: rgba(127,127,127,0.7);
-  width: 15vh;
-  height: 15vh;
-  border-radius: 10vh;
+  background: rgba(127,127,127,0.5);
+  width: 7.5vh;
+  height: 7.5vh;
+  border-radius: 5vh;
   cursor: pointer;
 }
 #c{
-  background: linear-gradient(to right, #f00, #f80, #880, #080,#088, #08f, #00f);
+  height: 50vh;
   font-size: 2.5vh;
+  border-radius: 15vh;
   text-align: center;
 }
 #r{
   background: linear-gradient(90deg, #000, #f00);
 }
-
 #g{
   background: linear-gradient(90deg, #000, #0f0);
-}
-  
+} 
 #b{
   background: linear-gradient(90deg, #000, #00f);
 }
