--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,14 @@
   margin: 0;
   padding: 0;
   font-family: 'Cutive Mono', monospace; 
-  width: 100%;
+  width: 100vw;
   height: 100vh;
   place-items: center;
 }
 body{ 
   display: grid;
   height: 100vh;
-  width: 100%;
+  width: 100vw;
   padding: 1%;
   background: White;
 }
@@ -20,7 +20,7 @@ div{
 }
 input{
   -webkit-appearance: none;
-  width: 95%;
+  width: 90vw;
   height: 7.5vh;
   border-radius: 7.5vh;
 }
@@ -46,7 +46,4 @@ input::-webkit-slider-thumb{
 } 
 #b{
   background: linear-gradient(90deg, #000, #00f);
-}
-#a{
-  background: linear-gradient(90deg, rgba(0, 0, 0, 0), rgba(255, 255, 255,1));
 }
