--- a/css/style.css
+++ b/css/style.css
@@ -1,49 +1,49 @@
-@import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap');
-*{
+@import url("https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap");
+* {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Cutive Mono', monospace; 
+  font-family: "Cutive Mono", monospace;
   width: 100vw;
   height: 100vh;
   place-items: center;
 }
-body{ 
+body {
   display: grid;
   height: 100vh;
   width: 100vw;
   padding: 1%;
   background: White;
 }
-div{
+div {
   display: grid;
 }
-input{
+input {
   -webkit-appearance: none;
   width: 90vw;
   height: 7.5vh;
   border-radius: 7.5vh;
 }
-input::-webkit-slider-thumb{
+input::-webkit-slider-thumb {
   -webkit-appearance: none;
-  background: rgba(127,127,127,0.5);
+  background: rgba(127, 127, 127, 0.5);
   width: 7.5vh;
   height: 7.5vh;
   border-radius: 5vh;
   cursor: pointer;
 }
-#c{
-  height: 45vh;
+input[type="button"] {
+  height: 20vh;
   font-size: 2.5vh;
   border-radius: 15vh;
   text-align: center;
 }
-#r{
+#r {
   background: linear-gradient(90deg, #000, #f00);
 }
-#g{
+#g {
   background: linear-gradient(90deg, #000, #0f0);
-} 
-#b{
+}
+#b {
   background: linear-gradient(90deg, #000, #00f);
 }
