--- a/docs/style.css
+++ b/docs/style.css
@@ -1,41 +1,37 @@
-@import url("https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap");
 * {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: "Cutive Mono", monospace;
-  width: 100vw;
-  height: 100vh;
-  place-items: center;
+  margin: 0 0;
+  padding: 0 0;
+  border-radius: 5vmin;
+  font-family: 'Courier New', Courier, monospace;
 }
 body {
   display: grid;
   height: 100vh;
   width: 100vw;
-  padding: 1%;
-  background: White;
 }
 div {
-  display: grid;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
 }
 input {
   -webkit-appearance: none;
-  width: 90vw;
-  height: 7.5vh;
-  border-radius: 7.5vh;
+  width: 95%;
+  height: 10vh;
 }
 input::-webkit-slider-thumb {
   -webkit-appearance: none;
   background: rgba(127, 127, 127, 0.5);
-  width: 7.5vh;
-  height: 7.5vh;
-  border-radius: 5vh;
+  border-radius: 5vmin;
+  width: 10vh;
+  height: 10vh;
   cursor: pointer;
 }
 input[type="button"] {
+  font-size: 5vmin;
   height: 20vh;
-  font-size: 2.5vh;
-  border-radius: 15vh;
   text-align: center;
 }
 #r {
